исправление ошибок при авторизации

--- a/hh_finder/main/templates/main/index.html
+++ b/hh_finder/main/templates/main/index.html
@@ -14,7 +14,7 @@
         <div class="main-text">
             <h2>Какие навыки тебе нужны?</h2>
             <p>Что нужно уметь, чтобы работать там, где хочешь? Узнай, какие ключевые навыки тебе нужно иметь, чтобы устроиться на работу мечты!</p>
-            <a href="" class="button">Начать</a>
+            <a href="{% url 'about' %}" class="button">Начать</a>
         </div>
     </section>
 {% endblock %}
