--- a/hh_finder/main/templates/main/index.html
+++ b/hh_finder/main/templates/main/index.html
@@ -6,7 +6,7 @@
     <header>
         <h1>Сайт</h1>
         <nav>
-            <a href="{% url 'about' %}">Начать</a>
+            <a href="{% url 'search:search' %}">Начать</a>
             <a href="{% url 'users:login' %}">Войти</a>
         </nav>
     </header>
@@ -14,7 +14,7 @@
         <div class="main-text">
             <h2>Какие навыки тебе нужны?</h2>
             <p>Что нужно уметь, чтобы работать там, где хочешь? Узнай, какие ключевые навыки тебе нужно иметь, чтобы устроиться на работу мечты!</p>
-            <a href="{% url 'about' %}" class="button">Начать</a>
+            <a href="{% url 'search:search' %}" class="button">Начать</a>
         </div>
     </section>
 {% endblock %}
